<resources>
    <string name="app_name">ResizeVideo</string>
    <string name="header_title">Reduce video size</string>
    <string name="home_title">Home</string>
    <string name="compressed_videos_title">Compressed Videos</string>
    <string name="extracted_audios_title">Extracted Audios</string>
    <string name="upgrade_to_premium_title">Upgrade To Premium</string>
    <string name="settings_title">Settings</string>
    <string name="rate_app_title">Rate app</string>
    <string name="share_title">Share</string>
    <string name="contact_us_title">Contact Us</string>
    <string name="others">Others</string>
    <string name="date_added">Date added</string>
    <string name="title">Title</string>
    <string name="size">Size</string>
    <string name="duration">Duration</string>
    <string name="descending">Descending</string>
    <string name="ascending">Ascending</string>

    <string-array name="list_title_options">
        <item>Smail Size</item>
        <item>Medium Size</item>
        <item>Large Size</item>
        <item>Best Quality</item>
        <item>Custom Resolution</item>
        <item>Custom File Size</item>
        <item>Advanced Compression</item>
    </string-array>

    <string-array name="list_description_options">
        <item>Acceptable quality - low resolution</item>
        <item>Good quality - medium resolution</item>
        <item>Better quality - large resolution</item>
        <item>Best quality - original resolution</item>
        <item>Select resolution for the video</item>
        <item>Optimize resolution and quantity based on file size</item>
        <item>Select resolution, bitrate and frame rate</item>
    </string-array>


    <string name="compress">Compress</string>
    <string name="chose_resolution">Chose Resolution</string>
    <string name="save">Save</string>
    <string name="dismiss">Dismiss</string>
    <string name="custom_value">Custom Value</string>
    <string name="aspect_ratio">Aspect ratio</string>
    <string name="update_to_premium">Update to premium</string>
    <string name="can_select_more_than_1_item">You can\'t select more than 1 item</string>
    <string name="select_compression">Select Compression</string>
    <string name="without_compression">Without Compression</string>
    <string name="continues">Continue</string>
    <string name="rename">Rename</string>
    <string name="compressed">Compressed</string>
    <string name="original">Original</string>
    <string name="compare">Compare</string>
    <string name="result">Result</string>
    <string name="error">Error</string>
    <string name="player">Player</string>
    <string name="unsaved_video">Unsaved Video</string>
    <string name="saved_videos">Saved Videos</string>
    <string name="compressed_videos">Compressed Videos</string>
    <string name="with_audio">With Audio</string>
    <string name="click_here">
    Click here to Compress Video
</string>

    <string name="play">Play</string>
    <string name="compare_with_original">Compare With Original</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="are_you_sure_you_want_to_delete_this_video">Are you sure you want to delete this video</string>
    <string name="are_you_sure_you_want_to_cancel_this_job_curent_compressed_video_will_be_removed_too">Are you sure you want to cancel this job,curent compressed video will be removed too</string>
    <string name="ok">OK</string>
    <string name="the_original_files_will_be_replaced_with_the_new_compressed_ones_are_you_sure_you_want_to_do_that">The original files will be replaced with the new compressed ones. Are you sure you want to do that?</string>
    <string name="replace">Replace</string>
    <string name="frame_rate">Frame rate</string>
    <string name="bitrate">Bitrate</string>
    <string name="chosse">Chosse</string>
    <string name="something_went_wrong_please_try_again">Something went wrong please try again</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="custom">Custom</string>
    <string name="custom_resolution">Custom resolution</string>

    <string name="smail_size">Smail Size</string>
    <string name="medium_size">Medium Size</string>
    <string name="large_size">Large Size</string>
    <string name="best_size">Best Quality</string>
    <string name="custom_file_size">Custom File Size</string>
    <string name="advanced_compression">Advanced Compression</string>
    <string name="multiple_compress_at_once">Multiple Compress at once</string>
    <string name="completely_ad_free">Completely Ad Free</string>
    <string name="vip_premium_features">VIP Premium Features</string>
    <string name="_1_year_60_off">1 Year - 60% OFF</string>
    <string name="month">1 Month</string>
    <string name="lifetime_best_deal">Lifetime - Best Deal</string>
    <string name="use_for_free">Use for free</string>
    <string name="recurrent_billing_cancel_anytime_in_google_play_store_subcription_settings">Recurrent billing Cancel anytime in Google Play Store subscription settings</string>
    <string name="title_intro_1">Compress your video,Without losing quality</string>
    <string name="title_intro_2">Professional Trim and Crop Video</string>
    <string name="title_intro_3">Seamless Video Convert Tools</string>
    <string name="title_intro_4">Advance and Easy Videos Tools</string>
    <string name="description_intro_1">Batch Processing Enable, Supported Format like Mp4,WEBM</string>
    <string name="description_intro_2">Our app offers the best video trim and crop tools for social networks like Instagram and TikTok </string>
    <string name="description_intro_3">We offers complete toolbox to video convert in different formats and mp3 format too</string>
    <string name="description_intro_4">You can use features like video to gif,gif to video,video slow, fast, flip &amp; rotate, mute,looper, reverse, volume and merge</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>