<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/sorting"   android:checkableBehavior="single">
        <item
            android:id="@+id/sortByDateAdded"
            android:title="@string/date_added"
            android:checked="true"
            />
        <item
            android:id="@+id/sortByTitle"
            android:title="@string/title"
            />
        <item
            android:id="@+id/sortBySize"
            android:title="@string/size"
            />
        <item
            android:id="@+id/sortByDuration"
            android:title="@string/duration"
            />
    </group>
    <group android:id="@+id/orderBy"
        android:checkableBehavior="single">
        <item
            android:id="@+id/sortByDesc"
            android:title="@string/descending"
            android:checked="true"
            />
        <item
            android:id="@+id/sortByAsc"
            android:title="@string/ascending"
            />
    </group>
</menu>
