<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/BackgroundScreen"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/corner_bottom_sheet"

    android:backgroundTint="@color/maintream"
    android:padding="15sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_close_24"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_toStartOf="@+id/done"
            android:layout_toEndOf="@+id/close"
            android:text="@string/advanced_compression"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/close" />

        <TextView
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_btn_action"
            android:backgroundTint="@color/buttonTintCb"
            android:gravity="center"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5sp"
            android:text="Done"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </RelativeLayout>

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <RadioButton
            android:id="@+id/rdiSmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smail_size"
            android:textStyle="bold"
            app:buttonTint="@color/buttonTintCb" />

        <RadioButton
            android:id="@+id/rdiMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/medium_size"
            android:textStyle="bold"
            app:buttonTint="@color/buttonTintCb" />

        <RadioButton
            android:id="@+id/rdiLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/large_size"
            android:textStyle="bold"
            app:buttonTint="@color/buttonTintCb" />

        <RadioButton
            android:id="@+id/rdiBest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/best_size"
            android:textStyle="bold"
            app:buttonTint="@color/buttonTintCb" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frame_rate"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerFrameRate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spinnerFrameRate" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup3" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinnerFrameRate"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15sp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup3"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bitrate"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/edtBitrate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerFrameRate" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtBitrate"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:background="#e3d6c3"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/spinnerFrameRate"
        app:layout_constraintTop_toBottomOf="@+id/spinnerFrameRate" />

</androidx.constraintlayout.widget.ConstraintLayout>
