<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    style="@style/BackgroundScreen"
    android:layout_height="match_parent"
    tools:context=".ui.compressed.CompressedActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/maintream"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/compressed"
        app:titleTextColor="@color/black" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnVideoSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15sp"
        android:layout_marginTop="15sp"
        android:text="@string/saved_videos"
        android:textColor="@color/white"
        android:textStyle="bold"

        app:cornerRadius="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:strokeColor="@color/maintream"
        app:strokeWidth="1dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnVideoUnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15sp"
        android:layout_marginTop="15sp"
        android:text="@string/unsaved_video"
        android:textColor="@color/gray"
        android:textStyle="bold"
        app:backgroundTint="@color/white"
        app:cornerRadius="5dp"
        app:layout_constraintStart_toEndOf="@+id/btnVideoSave"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:strokeColor="@color/gray"
        app:strokeWidth="1dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcy"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15sp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/bannerAds"
        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnVideoUnSave"
         app:spanCount="2" />

    <FrameLayout
        android:id="@+id/bannerAds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>